fix: adjust alignment of search input next/previous buttons
Looks like they became mis-aligned during spectrum switchover.

--- a/packages/components/src/SearchInput.scss
+++ b/packages/components/src/SearchInput.scss
@@ -37,27 +37,25 @@
   .search-change-selection {
     position: absolute;
     right: $spacer-1;
-    top: 15%;
-    bottom: 15%;
-    height: 70%;
+    top: 0;
+    height: 100%;
+    display: flex;
+    align-items: center;
   }
 
   .search-change-button {
-    background: none;
-    border: none;
     padding: 1px 2px;
+    height: calc(100% - $spacer-2);
   }
 
-  .search-change-text {
+  .search-change-text,
+  .search-match {
     background-color: fg-opacity(20);
-    border-radius: 10px;
-    padding: 1px 5px;
+    border-radius: 20px;
+    padding: 0 5px;
   }
 
   .search-match {
-    background-color: fg-opacity(20);
-    border-radius: 10px;
-    padding: 1px 5px;
-    margin: 0 5px;
+    margin: 0 $spacer-1;
   }
 }
